--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "chess.js": "^1.2.0",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
+    "react-chessboard": "^4.7.3",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.7"
   },
