--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ chess_piece/*:Zone.Identifier
 repomix-output.xml
 Crow-1.2.1-Linux
 pgns
+server
+Crow-1.2.1-Linux.deb:Zone.Identifier
+# Crow-1.2.1-Linux.deb
