--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,8 @@ Crow-1.2.1-Linux
 pgns
 server
 Crow-1.2.1-Linux.deb:Zone.Identifier
-# Crow-1.2.1-Linux.deb
+Crow-1.2.1-Linux.deb
+bbc.c
+bbc
+engine.wasm.map
+# engine.wasm
